2008-08-05  David Athay  <ko2fan@gmail.com>

	* src/gui/setup_video.cpp, src/net/charserverhandler.cpp: Fixed
	alignment issue with fps limit field (patch by Scraggy #384. Also
	fixed small spelling error.

2008-08-04  Dennis Friis  <peavey@placid.dk>

	* src/main.cpp: Fix typo in updatehost reported by Jaxad.

2008-07-27  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp: Target the nearest monster on joystick button 3.

2008-07-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/winver.h, README, configure.ac, data/help/changes.txt,
	data/help/header.txt, NEWS, CMakeLists.txt: Updated the version to
	0.0.25, release planned this Sunday.
	* README, data/help/commands.txt: Added documentation for F8 to toggle
	shortcut window.

2008-07-24  Eugenio Favalli  <elvenprogrammer@themanaworld.org>

	* src/game.cpp: Fixed visibility of buy and sell dialogs.
	* src/gui/buy.cpp: Properly update price after buying.

2008-07-23  Eugenio Favalli  <elvenprogrammer@themanaworld.org>

	* src/game.cpp, src/gui/buy.cpp, src/gui/itemshortcutwindow.cpp,
	src/gui/sell.cpp, src/gui/window.cpp: Remember windows visibility.

2008-07-22  David Athay  <ko2fan@gmail.com>

	* src/game.cpp: Revert the Alt-Gr fix as it did not work.
	* src/game.cpp, src/keyboardconfig.cpp, src/keyboardconfig.h: User can 
	now configure which modifier key is used for smilies.

2008-07-21  David Athay  <ko2fan@gmail.com>

	* src/game.cpp: Initial attempt at fixing Alt-Gr issue for Rotonen, 
	this commit is just for him!

2008-07-18  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/main.cpp: Remove possible trailing slash at the end of the
	update host, since otherwise there'll be two of them.

2008-07-16  Lloyd Bryant  <lloyd_bryant@netzero.net>

	* src/logindata.h, src/gui/char_server.cpp, src/gui/char_server.h,
	src/serverinfo.h, src/main.cpp, src/net/loginhandler.cpp,
	src/net/loginhandler.h, src/net/network.cpp: Added support for
	handling the custom eAthena packet that sends the update host.
